# avellaneda-stoikov

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  market_maker  mermaid.md  readme.md  readme_for_trader.md  tasks.md  tldr.md
include/: binance_client.hpp  inventory_manager.hpp  market_maker.hpp  market_making_env.hpp  utils.hpp
src/: binance_client.cpp  inventory_manager.cpp  main.cpp  market_maker.cpp  market_making_env.cpp  market_simulator.cpp  ppo_trainer.cpp
